--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <FrameLayout 
+    <FrameLayout
+        android:id="@+id/pic_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/pic_content"  />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
